install_headers(
    '../src/coupling/GhostSwingBus.h',
    '../src/coupling/GhostSwingBusManager.h',
    '../src/coupling/GhostSwingBusMessageTypes.h',
    '../src/coupling/MpiService.h',
    '../src/extraModels/extraModels.h',
    '../src/extraModels/txLifeSpan.h',
    '../src/extraModels/txThermalModel.h',
    '../src/extraSolvers/braid/braidInterface.h',
    '../src/extraSolvers/braid/braid_driver.h',
    '../src/extraSolvers/extraSolvers.h',
    '../src/extraSolvers/paradae/common/MapParam.h',
    '../src/extraSolvers/paradae/common/Timer.h',
    '../src/extraSolvers/paradae/common/def.h',
    '../src/extraSolvers/paradae/common/def_mpi.h',
    '../src/extraSolvers/paradae/equations/AllEquations.h',
    '../src/extraSolvers/paradae/equations/EqGridDyn.h',
    '../src/extraSolvers/paradae/equations/Equation.h',
    '../src/extraSolvers/paradae/equations/Equation_DAE.h',
    '../src/extraSolvers/paradae/equations/Equation_DAE_full.h',
    '../src/extraSolvers/paradae/equations/Equation_ODE.h',
    '../src/extraSolvers/paradae/math/DBlockTriMatrix.h',
    '../src/extraSolvers/paradae/math/DenseMatrix.h',
    '../src/extraSolvers/paradae/math/IPoly.h',
    '../src/extraSolvers/paradae/math/IVander.h',
    '../src/extraSolvers/paradae/math/IVanderExt.h',
    '../src/extraSolvers/paradae/math/PMultiVector.h',
    '../src/extraSolvers/paradae/math/PVector.h',
    '../src/extraSolvers/paradae/math/SBlockTriMatrix.h',
    '../src/extraSolvers/paradae/math/SMultiVector.h',
    '../src/extraSolvers/paradae/math/SVector.h',
    '../src/extraSolvers/paradae/math/SparseMatrix.h',
    '../src/extraSolvers/paradae/math/Vector.h',
    '../src/extraSolvers/paradae/math/VirtualMatrix.h',
    '../src/extraSolvers/paradae/math/VirtualVector.h',
    '../src/extraSolvers/paradae/math/paradaeArrayData.h',
    '../src/extraSolvers/paradae/problems/ODEProblem.h',
    '../src/extraSolvers/paradae/solvers/LineSearch.h',
    '../src/extraSolvers/paradae/solvers/Newton.h',
    '../src/extraSolvers/paradae/solvers/NewtonStats.h',
    '../src/extraSolvers/paradae/solvers/Solver.h',
    '../src/extraSolvers/paradae/timeintegrators/AllTimeIntegrators.h',
    '../src/extraSolvers/paradae/timeintegrators/BackwardDiff.h',
    '../src/extraSolvers/paradae/timeintegrators/BackwardEuler.h',
    '../src/extraSolvers/paradae/timeintegrators/Billington_23.h',
    '../src/extraSolvers/paradae/timeintegrators/BogaSham_23.h',
    '../src/extraSolvers/paradae/timeintegrators/Cash_24.h',
    '../src/extraSolvers/paradae/timeintegrators/Cash_34.h',
    '../src/extraSolvers/paradae/timeintegrators/DormPrince_45.h',
    '../src/extraSolvers/paradae/timeintegrators/ExpMidPoint.h',
    '../src/extraSolvers/paradae/timeintegrators/ExpTrapezoidal.h',
    '../src/extraSolvers/paradae/timeintegrators/FE_ExpTrap_12.h',
    '../src/extraSolvers/paradae/timeintegrators/ForwardEuler.h',
    '../src/extraSolvers/paradae/timeintegrators/Fudziah_45.h',
    '../src/extraSolvers/paradae/timeintegrators/Gauss4.h',
    '../src/extraSolvers/paradae/timeintegrators/Gauss6.h',
    '../src/extraSolvers/paradae/timeintegrators/ImpMidPoint.h',
    '../src/extraSolvers/paradae/timeintegrators/ImpTrapezoidal.h',
    '../src/extraSolvers/paradae/timeintegrators/ImpVarUnk_12.h',
    '../src/extraSolvers/paradae/timeintegrators/Kutta3.h',
    '../src/extraSolvers/paradae/timeintegrators/Kutta4.h',
    '../src/extraSolvers/paradae/timeintegrators/Radau3.h',
    '../src/extraSolvers/paradae/timeintegrators/Ralston.h',
    '../src/extraSolvers/paradae/timeintegrators/RungeKutta.h',
    '../src/extraSolvers/paradae/timeintegrators/RungeKutta_DIRK.h',
    '../src/extraSolvers/paradae/timeintegrators/RungeKutta_Explicit.h',
    '../src/extraSolvers/paradae/timeintegrators/RungeKutta_Implicit.h',
    '../src/extraSolvers/paradae/timeintegrators/RungeKutta_SDIRK.h',
    '../src/extraSolvers/paradae/timeintegrators/SDIRK_12.h',
    '../src/extraSolvers/paradae/timeintegrators/TimeIntegrator.h',
    '../src/fmi/FMI2/fmi2FunctionTypes.h',
    '../src/fmi/FMI2/fmi2Functions.h',
    '../src/fmi/FMI2/fmi2TypesPlatform.h',
    '../src/fmi/fmiGDinfo.h',
    '../src/fmi/fmi_import/fmiEnumDefinitions.h',
    '../src/fmi/fmi_import/fmiImport.h',
    '../src/fmi/fmi_import/fmiInfo.h',
    '../src/fmi/fmi_import/fmiLibraryManager.h',
    '../src/fmi/fmi_import/fmiObjects.h',
    '../src/fmi/fmi_importGD.h',
    '../src/fmi/fmi_models/CymeDistLoad.h',
    '../src/fmi/fmi_models/fmiCoSimLoad.h',
    '../src/fmi/fmi_models/fmiCoSimLoad3phase.h',
    '../src/fmi/fmi_models/fmiCoSimSubModel.h',
    '../src/fmi/fmi_models/fmiCoSimWrapper.hpp',
    '../src/fmi/fmi_models/fmiExciter.h',
    '../src/fmi/fmi_models/fmiGenModel.h',
    '../src/fmi/fmi_models/fmiGovernor.h',
    '../src/fmi/fmi_models/fmiMELoad.h',
    '../src/fmi/fmi_models/fmiMELoad3phase.h',
    '../src/fmi/fmi_models/fmiMESubModel.h',
    '../src/fmi/fmi_models/fmiMEWrapper.hpp',
    '../src/fmi/fmi_models/fmiSupport.h',
    '../src/fmi/fmi_models/fmiWrapper.hpp',
    '../src/fmi/fmi_models/outputEstimator.h',
    '../src/fmi_export/fmiCollector.h',
    '../src/fmi_export/fmiCoordinator.h',
    '../src/fmi_export/fmiEvent.h',
    '../src/fmi_export/fmiRunner.h',
    '../src/fmi_export/fmuBuilder.h',
    '../src/fmi_export/loadFMIExportObjects.h',
    '../src/fncs/fncsCollector.h',
    '../src/fncs/fncsGhostBus.h',
    '../src/fncs/fncsLibrary.h',
    '../src/fncs/fncsLoad.h',
    '../src/fncs/fncsSource.h',
    '../src/fncs/fncsSupport.h',
    '../src/fncs/fncslib/fncs.h',
    '../src/fncs/fncslib/fncs.hpp',
    '../src/fncs/fncslib/fncs_internal.hpp',
    '../src/fncs/fncslib/log.hpp',
    '../src/fncs/stub/fncs.hpp',
    '../src/fncs/test/fncsTest.h',
    '../src/formatInterpreters/iniReaderElement.h',
    '../src/formatInterpreters/jsonElement.h',
    '../src/formatInterpreters/jsonReaderElement.h',
    '../src/formatInterpreters/log.h',
    '../src/formatInterpreters/readerElement.h',
    '../src/formatInterpreters/tinyxml2ReaderElement.h',
    '../src/formatInterpreters/tinyxmlReaderElement.h',
    '../src/formatInterpreters/tomlElement.h',
    '../src/formatInterpreters/tomlReaderElement.h',
    '../src/formatInterpreters/yamlElement.h',
    '../src/formatInterpreters/yamlReaderElement.h',
    '../src/fskit/GridDynFederatedSimulator.h',
    '../src/fskit/fskitCommunicator.h',
    '../src/fskit/fskitRunner.h',
    '../src/fskit/gridDynFederatedScheduler.h',
    '../src/fskit/gridDynfskit.h',
    '../src/fskit/griddyn-tracer.h',
    '../src/fskit/protection-message.h',
    '../src/fskit/zonalRelayLogicalProcess.h',
    '../src/gridDynLoader/libraryLoader.h',
    '../src/gridDynServer/gridDynServer.h',
    '../src/griddyn_shared/griddyn.h',
    '../src/griddyn_shared/griddyn_export.h',
    '../src/griddyn_shared/griddyn_export_advanced.h',
    '../src/griddyn_shared/internal/griddyn_export_internal.h',
    '../src/helics/helicsCollector.h',
    '../src/helics/helicsCommunicator.h',
    '../src/helics/helicsCoordinator.h',
    '../src/helics/helicsEvent.h',
    '../src/helics/helicsGhostBus.h',
    '../src/helics/helicsLibrary.h',
    '../src/helics/helicsLoad.h',
    '../src/helics/helicsRunner.h',
    '../src/helics/helicsSource.h',
    '../src/helics/helicsSupport.h',
    '../src/helics/test/helicsTest.h',
    '../src/networking/AsioServiceManager.h',
    '../src/networking/TcpHelperClasses.h',
    '../src/networking/cppzmq/zmq.hpp',
    '../src/networking/cppzmq/zmq_addon.hpp',
    '../src/networking/dimeClientInterface.h',
    '../src/networking/dimeCollector.h',
    '../src/networking/dimeCommunicator.h',
    '../src/networking/dimeInterface.h',
    '../src/networking/dimeRunner.h',
    '../src/networking/networkingInterface.h',
    '../src/networking/tcpCollector.h',
    '../src/networking/tcpCommunicator.h',
    '../src/networking/tcpInterface.h',
    '../src/networking/zmqCommunicator.h',
    '../src/networking/zmqInterface.h',
    '../src/networking/zmqLibrary/zmqContextManager.h',
    '../src/networking/zmqLibrary/zmqHelper.h',
    '../src/networking/zmqLibrary/zmqProxyHub.h',
    '../src/networking/zmqLibrary/zmqReactor.h',
    '../src/networking/zmqLibrary/zmqSocketDescriptor.h',
    '../src/optimization/gridDynOpt.h',
    '../src/optimization/gridOptObjects.h',
    '../src/optimization/models/gridAreaOpt.h',
    '../src/optimization/models/gridBusOpt.h',
    '../src/optimization/models/gridGenOpt.h',
    '../src/optimization/models/gridLinkOpt.h',
    '../src/optimization/models/gridLoadOpt.h',
    '../src/optimization/models/gridRelayOpt.h',
    '../src/optimization/optHelperClasses.h',
    '../src/optimization/optObjectFactory.h',
    '../src/optimization/optimizerInterface.h',
    '../src/plugins/gridDynPluginApi.h',
    '../src/plugins/gridDynPlugins.h',
    '../src/runner/gridDynRunner.h',
    subdir : 'griddyn')

install_headers(
    '../src/utilities/GlobalWorkQueue.hpp',
    '../src/utilities/GuardedTypes.hpp',
    '../src/utilities/OperatingBoundary.h',
    '../src/utilities/ThreePhaseFunctions.h',
    '../src/utilities/dataDictionary.h',
    '../src/utilities/dataDictionary.hpp',
    '../src/utilities/functionInterpreter.h',
    '../src/utilities/gridRandom.h',
    '../src/utilities/indexTypes.hpp',
    '../src/utilities/logger.h',
    '../src/utilities/loggerCore.hpp',
    '../src/utilities/matrixCreation.h',
    '../src/utilities/matrixData.hpp',
    '../src/utilities/matrixDataBoost.hpp',
    '../src/utilities/matrixDataCompact.hpp',
    '../src/utilities/matrixDataContainer.hpp',
    '../src/utilities/matrixDataCustomWriteOnly.hpp',
    '../src/utilities/matrixDataFilter.hpp',
    '../src/utilities/matrixDataOrdered.hpp',
    '../src/utilities/matrixDataOrdering.hpp',
    '../src/utilities/matrixDataScale.hpp',
    '../src/utilities/matrixDataSparse.hpp',
    '../src/utilities/matrixDataSparseSM.hpp',
    '../src/utilities/matrixDataSparse_impl.hpp',
    '../src/utilities/matrixDataTranslate.hpp',
    '../src/utilities/matrixOps.h',
    '../src/utilities/randomDistributionsObjects.h',
    '../src/utilities/saturation.h',
    '../src/utilities/valuePredictor.hpp',
    '../src/utilities/vectData.hpp',
    '../src/utilities/zipUtilities.h',
    subdir : 'griddyn/utilities')

install_headers(
    '../src/core/coreDefinitions.hpp',
    '../src/core/coreExceptions.h',
    '../src/core/coreObject.h',
    '../src/core/coreObjectList.h',
    '../src/core/coreObjectTemplates.hpp',
    '../src/core/coreOwningPtr.hpp',
    '../src/core/coreProperties.hpp',
    '../src/core/factoryTemplates.hpp',
    '../src/core/griddyn_autogen.h',
    '../src/core/helperObject.h',
    '../src/core/nullObject.h',
    '../src/core/objectFactory.hpp',
    '../src/core/objectFactoryTemplates.hpp',
    '../src/core/objectInterpreter.h',
    '../src/core/objectOperatorInterface.hpp',
    '../src/core/propertyBuffer.h',
    subdir : 'griddyn/core')

install_headers(
    '../src/fileInput/elementReaderTemplates.hpp',
    '../src/fileInput/fileInput.h',
    '../src/fileInput/gridParameter.h',
    '../src/fileInput/readElement.h',
    '../src/fileInput/readElementFile.h',
    '../src/fileInput/readerHelper.h',
    '../src/fileInput/readerInfo.h',
    subdir : 'griddyn/fileInput')

install_headers(
    '../src/griddyn/allGridDynObjects.h',
    '../src/griddyn/Area.h',
    '../src/griddyn/Block.h',
    '../src/griddyn/Exciter.h',
    '../src/griddyn/GenModel.h',
    '../src/griddyn/Generator.h',
    '../src/griddyn/Governor.h',
    '../src/griddyn/gridBus.h',
    '../src/griddyn/gridComponent.h',
    '../src/griddyn/gridComponentHelperClasses.h',
    '../src/griddyn/gridDynDefinitions.hpp',
    '../src/griddyn/gridDynGovernor.h',
    '../src/griddyn/gridDynSimulation.h',
    '../src/griddyn/gridPrimary.h',
    '../src/griddyn/gridSecondary.h',
    '../src/griddyn/gridSubModel.h',
    '../src/griddyn/griddyn_autogen.h',
    '../src/griddyn/Link.h',
    '../src/griddyn/Load.h',
    '../src/griddyn/numericEstimationFunctions.h',
    '../src/griddyn/offsetTable.h',
    '../src/griddyn/Relay.h',
    '../src/griddyn/Source.h',
    '../src/griddyn/Stabilizer.h',
    subdir : 'griddyn/griddyn')

install_headers(
    '../src/griddyn/blocks/blockLibrary.h',
    '../src/griddyn/blocks/blockSequence.h',
    '../src/griddyn/blocks/controlBlock.h',
    '../src/griddyn/blocks/deadbandBlock.h',
    '../src/griddyn/blocks/delayBlock.h',
    '../src/griddyn/blocks/derivativeBlock.h',
    '../src/griddyn/blocks/filteredDerivativeBlock.h',
    '../src/griddyn/blocks/functionBlock.h',
    '../src/griddyn/blocks/integralBlock.h',
    '../src/griddyn/blocks/lutBlock.h',
    '../src/griddyn/blocks/nullBlock.h',
    '../src/griddyn/blocks/pidBlock.h',
    '../src/griddyn/blocks/rampLimiter.h',
    '../src/griddyn/blocks/transferFunctionBlock.h',
    '../src/griddyn/blocks/valueLimiter.h',
    subdir : 'griddyn/griddyn/blocks')

install_headers(
    '../src/griddyn/comms/Communicator.h',
    '../src/griddyn/comms/commManager.h',
    '../src/griddyn/comms/commMessage.h',
    '../src/griddyn/comms/communicationsCore.h',
    '../src/griddyn/comms/controlMessage.h',
    '../src/griddyn/comms/relayMessage.h',
    '../src/griddyn/comms/schedulerMessage.h',
    subdir : 'griddyn/griddyn/comms')

install_headers(
    '../src/griddyn/controllers/AGControl.h',
    '../src/griddyn/controllers/controlSystem.h',
    '../src/griddyn/controllers/dispatcher.h',
    '../src/griddyn/controllers/reserveDispatcher.h',
    '../src/griddyn/controllers/scheduler.h',
    '../src/griddyn/controllers/schedulerInfo.h',
    subdir : 'griddyn/griddyn/controllers')

install_headers(
    '../src/griddyn/exciters/ExciterDC1A.h',
    '../src/griddyn/exciters/ExciterDC2A.h',
    '../src/griddyn/exciters/ExciterIEEEtype1.h',
    '../src/griddyn/exciters/ExciterIEEEtype2.h',
    subdir : 'griddyn/griddyn/exciters')

install_headers(
    '../src/griddyn/generators/DynamicGenerator.h',
    '../src/griddyn/generators/isocController.h',
    '../src/griddyn/generators/variableGenerator.h',
    subdir : 'griddyn/griddyn/generators')

install_headers(
    '../src/griddyn/genmodels/GenModel3.h',
    '../src/griddyn/genmodels/GenModel4.h',
    '../src/griddyn/genmodels/GenModel5.h',
    '../src/griddyn/genmodels/GenModel5type2.h',
    '../src/griddyn/genmodels/GenModel5type3.h',
    '../src/griddyn/genmodels/GenModel6.h',
    '../src/griddyn/genmodels/GenModel6type2.h',
    '../src/griddyn/genmodels/GenModel8.h',
    '../src/griddyn/genmodels/GenModelClassical.h',
    '../src/griddyn/genmodels/GenModelGENROU.h',
    '../src/griddyn/genmodels/GenModelInverter.h',
    '../src/griddyn/genmodels/otherGenModels.h',
    subdir : 'griddyn/griddyn/genmodels')

install_headers(
    '../src/griddyn/governors/GovernorHydro.h',
    '../src/griddyn/governors/GovernorIeeeSimple.h',
    '../src/griddyn/governors/GovernorReheat.h',
    '../src/griddyn/governors/GovernorSteamNR.h',
    '../src/griddyn/governors/GovernorSteamTCSR.h',
    '../src/griddyn/governors/GovernorTgov1.h',
    '../src/griddyn/governors/GovernorTypes.h',
    subdir : 'griddyn/griddyn/governors')

install_headers(
    '../src/griddyn/links/acLine.h',
    '../src/griddyn/links/acdcConverter.h',
    '../src/griddyn/links/adjustableTransformer.h',
    '../src/griddyn/links/dcLink.h',
    '../src/griddyn/links/hvdc.h',
    '../src/griddyn/links/longLine.h',
    '../src/griddyn/links/subsystem.h',
    '../src/griddyn/links/zBreaker.h',
    subdir : 'griddyn/griddyn/links')

install_headers(
    '../src/griddyn/loads/ThreePhaseLoad.h',
    '../src/griddyn/loads/aggregateLoad.h',
    '../src/griddyn/loads/approximatingLoad.h',
    '../src/griddyn/loads/exponentialLoad.h',
    '../src/griddyn/loads/fDepLoad.h',
    '../src/griddyn/loads/fileLoad.h',
    '../src/griddyn/loads/frequencySensitiveLoad.h',
    '../src/griddyn/loads/gridLabDLoad.h',
    '../src/griddyn/loads/motorLoad.h',
    '../src/griddyn/loads/motorLoad3.h',
    '../src/griddyn/loads/motorLoad5.h',
    '../src/griddyn/loads/rampLoad.h',
    '../src/griddyn/loads/sourceLoad.h',
    '../src/griddyn/loads/svd.h',
    '../src/griddyn/loads/zipLoad.h',
    subdir : 'griddyn/griddyn/loads')

install_headers(
    '../src/griddyn/measurement/Condition.h',
    '../src/griddyn/measurement/Recorder.h',
    '../src/griddyn/measurement/collector.h',
    '../src/griddyn/measurement/grabberInterpreter.hpp',
    '../src/griddyn/measurement/grabberSet.h',
    '../src/griddyn/measurement/gridGrabbers.h',
    '../src/griddyn/measurement/objectGrabbers.h',
    '../src/griddyn/measurement/stateGrabber.h',
    subdir : 'griddyn/griddyn/measurement')

install_headers(
    '../src/griddyn/primary/BusControls.h',
    '../src/griddyn/primary/DcBusControls.h',
    '../src/griddyn/primary/acBus.h',
    '../src/griddyn/primary/dcBus.h',
    '../src/griddyn/primary/infiniteBus.h',
    '../src/griddyn/primary/listMaintainer.h',
    subdir : 'griddyn/griddyn/primary')

install_headers(
    '../src/griddyn/relays/breaker.h',
    '../src/griddyn/relays/busRelay.h',
    '../src/griddyn/relays/controlRelay.h',
    '../src/griddyn/relays/differentialRelay.h',
    '../src/griddyn/relays/fuse.h',
    '../src/griddyn/relays/loadRelay.h',
    '../src/griddyn/relays/pmu.h',
    '../src/griddyn/relays/sensor.h',
    '../src/griddyn/relays/zonalRelay.h',
    subdir : 'griddyn/griddyn/relays')

install_headers(
    '../src/griddyn/simulation/contingency.h',
    '../src/griddyn/simulation/continuation.h',
    '../src/griddyn/simulation/diagnostics.h',
    '../src/griddyn/simulation/dynamicInitialConditionRecovery.h',
    '../src/griddyn/simulation/faultResetRecovery.h',
    '../src/griddyn/simulation/gridDynActions.h',
    '../src/griddyn/simulation/gridDynSimulationFileOps.h',
    '../src/griddyn/simulation/gridSimulation.h',
    '../src/griddyn/simulation/powerFlowErrorRecovery.h',
    subdir : 'griddyn/griddyn/simulation')

install_headers(
    '../src/griddyn/solvers/arkodeInterface.h',
    '../src/griddyn/solvers/basicOdeSolver.h',
    '../src/griddyn/solvers/basicSolver.h',
    '../src/griddyn/solvers/cvodeInterface.h',
    '../src/griddyn/solvers/idaInterface.h',
    '../src/griddyn/solvers/kinsolInterface.h',
    '../src/griddyn/solvers/solverInterface.h',
    '../src/griddyn/solvers/solverMode.hpp',
    '../src/griddyn/solvers/sundialsInterface.h',
    '../src/griddyn/solvers/sundialsMatrixData.h',
    subdir : 'griddyn/griddyn/solvers')

install_headers(
    '../src/griddyn/sources/blockSource.h',
    '../src/griddyn/sources/commSource.h',
    '../src/griddyn/sources/fileSource.h',
    '../src/griddyn/sources/functionSource.h',
    '../src/griddyn/sources/grabberSource.h',
    '../src/griddyn/sources/otherSources.h',
    '../src/griddyn/sources/pulseSource.h',
    '../src/griddyn/sources/rampSource.h',
    '../src/griddyn/sources/randomSource.h',
    '../src/griddyn/sources/sineSource.h',
    '../src/griddyn/sources/sourceTypes.h',
    subdir : 'griddyn/griddyn/sources')

install_headers(
    '../src/griddyn/events/Event.h',
    '../src/griddyn/events/Player.h',
    '../src/griddyn/events/compoundEvent.h',
    '../src/griddyn/events/compoundEventPlayer.h',
    '../src/griddyn/events/eventAdapters.h',
    '../src/griddyn/events/eventInterface.hpp',
    '../src/griddyn/events/eventQueue.h',
    '../src/griddyn/events/interpolatingPlayer.h',
    '../src/griddyn/events/parameterOperator.h',
    '../src/griddyn/events/reversibleEvent.h',
    subdir : 'griddyn/griddyn/events')
